Add kf5-kio-devel build requires
[rpm] Add kf5-kio-devel build requires

--- a/rpm/kf5-kactivities.yaml
+++ b/rpm/kf5-kactivities.yaml
@@ -34,6 +34,7 @@ PkgBR:
     - kf5-kdbusaddons-devel
     - kf5-kconfig-devel
     - kf5-kjs-devel
+    - kf5-kio-devel
 PkgConfigBR:
     - Qt5Core
     - Qt5DBus
