Remove kf5/ suffix in plugins directory
[rpm] Remove kf5/ suffix in plugins directory

--- a/rpm/kf5-kactivities.yaml
+++ b/rpm/kf5-kactivities.yaml
@@ -100,4 +100,4 @@ SubPackages:
           - "%{_kf5_bindir}/kactivitymanagerd"
           - "%{_kf5_datadir}/kservices5/kactivitymanagerd.desktop"
           - "%{_kf5_datadir}/kservicetypes5/kactivitymanagerd-plugin.desktop"
-          - "%{_kf5_qtplugindir}/kf5/*"
+          - "%{_kf5_qtplugindir}/*"
