--- a/rpm/kf5-kactivities.yaml
+++ b/rpm/kf5-kactivities.yaml
@@ -35,6 +35,7 @@ PkgBR:
     - kf5-kconfig-devel
     - kf5-kjs-devel
     - kf5-kio-devel
+    - boost-devel
 PkgConfigBR:
     - Qt5Core
     - Qt5DBus
