fix summary length

--- a/rpm/kf5-kactivities.yaml
+++ b/rpm/kf5-kactivities.yaml
@@ -3,9 +3,10 @@ Version      : 4.99.0
 Release      : 1
 Group        : System/Base
 License      : GPLv2+
-Summary      : A KDE Frameworks 5 Tier 3 runtime and library to organize the user work in separate activitie
+Summary      : A KDE Frameworks 5 Tier 3 runtime and library to organize activities
 Description  : |
-  A KDE Frameworks 5 Tier 3 runtime and library to organize the user work in separate activitie
+  A KDE Frameworks 5 Tier 3 API for using and interacting with Activities as a
+  consumer, application adding information to them or as an activity manager.
 URL          : http://www.kde.org
 SetupOptions : -q -n %{name}-%{version}/upstream
 
