--- a/rpm/kactivities.yaml
+++ b/rpm/kactivities.yaml
@@ -35,6 +35,7 @@ PkgBR:
     - kconfig-devel
     - kjs-devel
     - kio-devel
+    - kdeclarative-devel
     - boost-devel
 PkgConfigBR:
     - Qt5Core
