--- a/rpm/kactivities.yaml
+++ b/rpm/kactivities.yaml
@@ -105,5 +105,9 @@ SubPackages:
       Files:
           - "%{_kf5_bindir}/kactivitymanagerd"
           - "%{_kf5_servicesdir}/kactivitymanagerd.desktop"
+          - "%{_kf5_servicesdir}/kactivitymanagerd-plugin-*.desktop"
+          - "%{_kf5_servicesdir}/activities.protocol"
           - "%{_kf5_servicetypesdir}/kactivitymanagerd-plugin.desktop"
           - "%{_kf5_plugindir}/*"
+          - "%{_kf5_servicesdir}/kcm_activities.desktop"
+          - "%{_kf5_datadir}/kactivitymanagerd"
