Include more desktop entries with glob

--- a/rpm/kactivities.yaml
+++ b/rpm/kactivities.yaml
@@ -105,7 +105,7 @@ SubPackages:
       Files:
           - "%{_kf5_bindir}/kactivitymanagerd"
           - "%{_kf5_servicesdir}/kactivitymanagerd.desktop"
-          - "%{_kf5_servicesdir}/kactivitymanagerd-plugin-*.desktop"
+          - "%{_kf5_servicesdir}/kactivitymanagerd*.desktop"
           - "%{_kf5_servicesdir}/activities.protocol"
           - "%{_kf5_servicetypesdir}/kactivitymanagerd-plugin.desktop"
           - "%{_kf5_plugindir}/*"
